# MoDaCor

./: .cookiecutterrc  .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  modacor-srv.container  objects.inv  output.json  output.txt  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  tox.ini  usage.html
.github/workflows/: build.yml  ci-cd.yml  coverage.yml  docs.yml  release.yml  tests.yml
_sources/: readme.md.txt  usage.md.txt
_sources/examples/: index.md.txt  mouse_pipeline.md.txt  saxsess_pipeline.md.txt
_sources/extending/: contribution_checklist.md.txt
_sources/getting_started/: index.md.txt
_sources/pipeline_operations/: backlog.md.txt  index.md.txt  pipeline_basics.md.txt
_sources/reference/: index.md.txt
ci/: requirements.txt  update.py
coverage-report/: cov.json  index.html
coverage-report/20260205_a2c832655d/: class_index.html  function_index.html  index.html  z_1704e02640f46157___init___py.html  z_1e584bee0713db32_pipeline_tracer_py.html  z_26e4d17cab654dd4___init___py.html  z_26e4d17cab654dd4_yaml_source_py.html  z_34cebea739a54b95___init___py.html  z_34cebea739a54b95_test_append_processing_data_py.html  z_34cebea739a54b95_test_append_sink_py.html  z_34cebea739a54b95_test_append_source_py.html  z_34cebea739a54b95_test_bitwise_or_masks_py.html  z_34cebea739a54b95_test_combine_uncertainties_max_py.html  z_34cebea739a54b95_test_combine_uncertainties_py.html  z_34cebea739a54b95_test_divide_py.html  z_34cebea739a54b95_test_find_scale_factor1d_py.html  z_34cebea739a54b95_test_multiply_databundles_py.html  z_34cebea739a54b95_test_multiply_py.html  z_34cebea739a54b95_test_poisson_uncertainties_py.html  z_34cebea739a54b95_test_reduce_dimensionality_py.html  z_34cebea739a54b95_test_sink_processing_data_py.html  z_34cebea739a54b95_test_subtract_databundles_py.html  z_34cebea739a54b95_test_subtract_py.html  z_34cebea739a54b95_test_units_label_update_py.html  z_46d992ea47d4c2ba___init___py.html  z_46d992ea47d4c2ba_units_py.html  z_48d63cefd906b521___init___py.html  z_48d63cefd906b521_basedata_py.html  z_48d63cefd906b521_databundle_py.html  z_48d63cefd906b521_helpers_py.html  z_48d63cefd906b521_messagehandler_py.html  z_48d63cefd906b521_process_step_describer_py.html  z_48d63cefd906b521_process_step_py.html  z_48d63cefd906b521_processing_data_py.html  z_48d63cefd906b521_trace_event_py.html  z_48d63cefd906b521_uncertainty_tools_py.html  z_48d63cefd906b521_validators_py.html  z_4976850406e506a4_test_tracing_integration_py.html  z_54b65902621e3ef3_test_pipeline_py.html  z_54b65902621e3ef3_test_process_step_registry_py.html  (+74 more)
coverage-report/20260205_b1bb590c6a/: class_index.html  function_index.html  index.html  z_1704e02640f46157___init___py.html  z_1e584bee0713db32_pipeline_tracer_py.html  z_26e4d17cab654dd4___init___py.html  z_26e4d17cab654dd4_yaml_source_py.html  z_34cebea739a54b95___init___py.html  z_34cebea739a54b95_test_append_processing_data_py.html  z_34cebea739a54b95_test_append_sink_py.html  z_34cebea739a54b95_test_append_source_py.html  z_34cebea739a54b95_test_bitwise_or_masks_py.html  z_34cebea739a54b95_test_combine_uncertainties_max_py.html  z_34cebea739a54b95_test_combine_uncertainties_py.html  z_34cebea739a54b95_test_divide_py.html  z_34cebea739a54b95_test_find_scale_factor1d_py.html  z_34cebea739a54b95_test_multiply_databundles_py.html  z_34cebea739a54b95_test_multiply_py.html  z_34cebea739a54b95_test_poisson_uncertainties_py.html  z_34cebea739a54b95_test_reduce_dimensionality_py.html  z_34cebea739a54b95_test_sink_processing_data_py.html  z_34cebea739a54b95_test_subtract_databundles_py.html  z_34cebea739a54b95_test_subtract_py.html  z_34cebea739a54b95_test_units_label_update_py.html  z_46d992ea47d4c2ba___init___py.html  z_46d992ea47d4c2ba_units_py.html  z_48d63cefd906b521___init___py.html  z_48d63cefd906b521_basedata_py.html  z_48d63cefd906b521_databundle_py.html  z_48d63cefd906b521_helpers_py.html  z_48d63cefd906b521_messagehandler_py.html  z_48d63cefd906b521_process_step_describer_py.html  z_48d63cefd906b521_process_step_py.html  z_48d63cefd906b521_processing_data_py.html  z_48d63cefd906b521_trace_event_py.html  z_48d63cefd906b521_uncertainty_tools_py.html  z_48d63cefd906b521_validators_py.html  z_4976850406e506a4_test_tracing_integration_py.html  z_54b65902621e3ef3_test_pipeline_py.html  z_54b65902621e3ef3_test_process_step_registry_py.html  (+74 more)
coverage-report/20260205_dac8dbc1da/: class_index.html  function_index.html  index.html  status.json  z_1704e02640f46157___init___py.html  z_1e584bee0713db32_pipeline_tracer_py.html  z_26e4d17cab654dd4___init___py.html  z_26e4d17cab654dd4_yaml_source_py.html  z_34cebea739a54b95___init___py.html  z_34cebea739a54b95_test_append_processing_data_py.html  z_34cebea739a54b95_test_append_sink_py.html  z_34cebea739a54b95_test_append_source_py.html  z_34cebea739a54b95_test_bitwise_or_masks_py.html  z_34cebea739a54b95_test_combine_uncertainties_max_py.html  z_34cebea739a54b95_test_divide_py.html  (+100 more)
docs/: Classes.drawio  FlowGeneral.drawio  authors.md  changelog.md  conf.py  contributing.md  full_flow.drawio  index.md  index.rst  installation.md  installation.rst  readme.md  requirements.txt  usage.md  usage.rst  weighting_variances.ipynb
examples/: index.html  mouse_pipeline.html  saxsess_pipeline.html
extending/: contribution_checklist.html  index.html  io_source_sink_guide.html  module_author_guide.html
getting_started/: cli_and_runner.html  index.html  quickstart.html
pipeline_operations/: backlog.html  configuration_reference.html  index.html  pipeline_basics.html  runtime_service_api.html  tracing_and_debugging.html
reference/: index.html
scripts/: generate_module_doc.py
tests/: requirements.txt  test_basedata.py  test_cli.py  test_generate_module_doc.py  test_import.py  test_modacor.py  test_processstep.py  test_units.py
(+753 files in other folders)
