[project]
name = "modacor"
description = "A new modular data correction software for any neutron or X-ray technique that produces 1D or 2D scattering, diffraction, or imaging data."
dynamic = ["version", "readme"]
license = "BSD-3-Clause"
classifiers = [
  # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Framework :: Jupyter :: JupyterLab",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
]

dependencies = [
    "attrs",
    "numpy",
    "h5py",
    "pint",
    "scipy",
]

[project.optional-dependencies]
tests = [
  "tox",
  "pytest",
  "pytest-cov",
  "pre-commit",
]
docs = [
    "sphinx>=6.2",
    "myst-parser>=2.0",
    "pydata-sphinx-theme>=0.14",
    "linkify-it-py",
    "toml",
    "sphinxcontrib-mermaid"
]
ci = [
    "tox",
    "build",
    "toml",
    "python-semantic-release",
    # provides the *coverage* command to combine and publish coverage data
    # generated within tox environments
    "pytest-cov"
]

[[project.authors]]
name = "Ingo Breßler"
email = "ingo.bressler@bam.de"

[[project.authors]]
name = "Anja Hörmann"
email = "anja.hoermann@bam.de"

[[project.authors]]
name = "Jerome Kieffer"
email = "Jerome.Kieffer@esrf.fr"

[[project.authors]]
name = "Armin Moser"
email = "armin.moser@anton-paar.com"

[[project.authors]]
name = "Brian R. Pauw"
email = "brian.pauw@bam.de"

[[project.authors]]
name = "Tim Snow"
email = "tim.snow@diamond.ac.uk"

[[project.authors]]
name = "Glen J. Smales"
email = "glen@slightlyscattered.com"

[[project.authors]]
name = "Malte Storm"
email = "malte.storm@hereon.de"

[project.urls]
homepage = "https://BAMresearch.github.io/MoDaCor"
documentation = "https://BAMresearch.github.io/MoDaCor"
repository = "https://github.com/BAMresearch/MoDaCor"
changelog = "https://BAMresearch.github.io/MoDaCor/changelog.html"

[build-system]
requires = [
    "setuptools>=40.6",
    "wheel",
]
# check-manifest checks that, https://github.com/mgedmin/check-manifest/commit/c9df78
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["modacor*"]

[tool.setuptools.dynamic]
version = {attr = "modacor.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.coverage.report]
path = "coverage-report"  # see coverage.yml github action

# on version numbers: https://peps.python.org/pep-0440/
# and bottom of https://softwareengineering.stackexchange.com/a/151558
[tool.semantic_release]
allow_zero_version = true
version_variables = [                        # version location
    "src/modacor/__init__.py:__version__",
    "docs/conf.py:version",
]
[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "enh", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat", "enh"]
patch_tags = ["fix", "perf"]
[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore", ".*\\bGHA\\b.*", ".*\\b[gG][hH] actions?\\b.*"]
[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
line_length = 120
group_by_package = true
known_first_party = "modacor"
ensure_newline_before_comments = true
extend_skip = ["ci/templates", ".ipynb_checkpoints"]

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
